# auto-harness

./: .env.example  .gitignore  Dockerfile  LICENSE  PROGRAM.md  README.md  SWE-PROGRAM.md  TAU-PROGRAM.md  TROUBLESHOOTING.md  _env.py  benchmark.py  docker-compose.yml  experiment_config.swe.yaml.example  experiment_config.yaml  experiment_config.yaml.template  gating.py  prepare.py  pyproject.toml  record.py  tasks.md
agent/: agent.py  agent_harbor.py  agent_tau.py  bird_adk_runtime.py  bird_service.py  core.py  swe_agent.py  tau_agent.py  tbench_agent.py
agent/helpers/: __init__.py
agent/helpers/bfcl/: registry.py  run.py  setup.py
agent/helpers/bird_interact/: __init__.py  bird_adk_runtime.py  bird_service.py  setup.py
agent/swe/: __init__.py  diag.py  log_collapse.py  runner.py
agent/templates/: bfcl.py  bird_interact.py  tau_bench.py  terminal_bench.py  webarena.py
auto_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: learnings.md
fixtures/webarena_smoke/: app.py
jobs/2026-04-08__23-44-32/: results.json  run_metadata.json
jobs/2026-04-08__23-53-30/: results.json  run_metadata.json
jobs/2026-04-08__23-53-30/nginx-request-logging/nginx-request-logging.1-of-1.2026-04-08__23-53-30/: results.json
jobs/2026-04-08__23-54-41/: results.json  run_metadata.json
jobs/2026-04-09__00-38-42/: results.json  run_metadata.json
jobs/2026-04-09__00-41-11/: results.json  run_metadata.json
jobs/2026-04-09__00-44-48/: results.json  run_metadata.json
jobs/2026-04-09__00-48-36/: results.json  run_metadata.json
jobs/2026-04-09__00-52-25/: results.json  run_metadata.json
jobs/2026-04-09__00-57-10/: results.json  run_metadata.json
jobs/2026-04-09__01-02-21/: results.json  run_metadata.json
jobs/2026-04-09__01-10-13/: results.json  run_metadata.json
jobs/2026-04-09__01-11-37/: results.json  run_metadata.json
jobs/2026-04-09__01-39-54/: results.json  run_metadata.json
planning/: high-level.md  important.md  initial-plan.md
program_templates/: base.md  bfcl.md  bird_interact.md  tau_bench.md  terminal_bench.md  webarena.md
runs/2026-04-08__13-55-13/: results.json  run_metadata.json
runs/2026-04-08__13-59-50/: results.json  run_metadata.json
runs/2026-04-08__14-02-06/: run_metadata.json
scripts/: bfcl_spike.py  seed_suite_from_train_results.py  setup_swe.sh  swe_log_summary.py
tau2-data/simulations/20260408_194922_retail_custom_agent_gpt-5.4_user_simulator_gpt-4.1-2025-04-14/: results.json
tau2-data/simulations/20260408_201405_retail_custom_agent_gpt-5.4_user_simulator_gpt-4.1-2025-04-14/: results.json
tau2-data/simulations/20260408_201611_retail_custom_agent_gpt-5.4_user_simulator_gpt-4.1-2025-04-14/: results.json
tbench_data/: task_split.json
testing/: baseline_mini_swe.py  eval_preds.py  testing.py
webarena/: __init__.py  driver.py
webarena_data/: reddit_candidate_tasks.json
webarena_data/smoke_tasks/: 10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json
(+1649 files in other folders)
